modules/network/main.tf
resource "aws_vpc" "this" {
    cidr_block              = var.vpc_cidr
    enable_dns_hostnames    = true
    enable_dns_support      = true

    tags = {
        Name = "${var.name_prefix}-vpc"
    }
}

resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id

    tags = {
        Name = "${var.name_prefix}-igw"

    }

}

resource "aws_subnet" "public_a" {
    vpc_id              = aws_vpc.this.id
    cidr_block          = cidrsubnet(var.vpc_cidr, 8, 1)
    availability_zone   = "${var.aws_region}a"
    map_public_ip_on_launch = true

    tags = {Name = "${var.name_prefix}-public-a"}

}

resource "aws_subnet" "public_b" {
    vpc_id              = aws_vpc.this.id
    cidr_block          = cidrsubnet(var.vpc_cidr, 8, 2)
    availability_zone   = "${var.aws_region}b"
    map_public_ip_on_launch = true

    tags = {Name = "${var.name_prefix}-public-b"}

}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.this.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.this.id

    }

    tags = { Name = "${var.name_prefix}-public-rt"}

}

resource "aws_route_table_association" "public_a" {
    subnet_id       = aws_subnet.public_b.id
    route_table_id  = aws_route_table.public.id

}

resource "aws_route_table_association" "public_b" {
    subnet_id       = aws_subnet.public_b.id
    route_table_id  = aws_route_table.public.id

}

resource "aws_security_group" "web" {
    name        = "${var.name_prefix}-web-sg"
    description = "Allow HTTP inbound; all outbound"
    vpc_id      = aws_vpc.this.id

    ingress {
        description = "HTTP"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks  = ["0.0.0.0/0"]


    }
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks  = ["0.0.0.0/0"]

    }
    tags = {
        Name = "${var.name_prefix}-web-sg"

    }
}
